# notebooklm-agent-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: setup-lxplus.md
scripts/: bootstrap.sh
src/notebooklm_agent_tools/: __init__.py  cli.py  core.py
